Fix for the align  "Projects/About/Contact" with logo

--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ a:focus {
 
 .left-side {
   display: flex;
+  align-items: center;
 }
 
 .nav-wrapper > .left-side > div {
